<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.shellever.raw.MainActivity">


    <TextView
        android:id="@+id/tv_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="5dp"
        android:text="@string/text_content_default"
        android:textAllCaps="false"
        android:layout_gravity="center_horizontal" />

    <Button
        android:id="@+id/btn_read_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/text_read_line"
        android:textAllCaps="false"
        android:layout_gravity="center_horizontal" />

    <Button
        android:id="@+id/btn_read_byte"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/text_read_byte"
        android:textAllCaps="false"
        android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <Button
            android:id="@+id/btn_start"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_start"
            android:textAllCaps="false"
            android:layout_gravity="center_horizontal" />

        <Space
            android:layout_width="2dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_reset"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_reset"
            android:textAllCaps="false"
            android:layout_gravity="center_horizontal" />

        <Space
            android:layout_width="2dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_pause"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_pause"
            android:textAllCaps="false"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>
</LinearLayout>
